Added martial status and refactored person entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=BIG Smallville Census API
+
+server-port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/smallvilledb
+
+# IMPORTANT - replace username and password for values within your PSQL service
+spring.datasource.username=ebag
+spring.datasource.password=b@g3l$#$
+
+spring.jpa.hibernate.ddl-auto=validate
