Outlined person controller and incentive response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=BIG Smallville Census API
+api.endpoint=/api/v1/
 
 server-port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/smallvilledb
