implemented listEmployeesInABusiness method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server-port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/smallvilledb
 
 # IMPORTANT - replace username and password for values within your PSQL service
-spring.datasource.username=ebag
-spring.datasource.password=b@g3l$#$
+spring.datasource.username=postgres
+spring.datasource.password=CWkf-T7F
 
 spring.jpa.hibernate.ddl-auto=validate
